#249 Fix button alignment when not using English

--- a/src/modules/main/channels/_rtc.scss
+++ b/src/modules/main/channels/_rtc.scss
@@ -40,6 +40,8 @@
             }
 
             .contents-3NembX{
+                // Display: flex required to fix alignment of soundboard icon when using non-English - see #249
+                display: flex;
                 font-size: 0;
                 svg{
                     margin-right: 0;
